# cp_t_revision

./: .gitignore  README.md  pyproject.toml
notebooks/: pred_comparison.ipynb  transition_matrix_init.ipynb
src/cp_t_revision/: cp_revision.py  custom_transforms.py  data_modules.py  losses.py  models.py  noise_transforms.py  run_experiment.py
src/cp_t_revision/cifar_n/: datasets.py
src/cp_t_revision/configs/: config.yaml
src/cp_t_revision/configs/experiment/: cifar100_resnet.yaml  cifar100_resnet_cprevision.yaml  cifar10_resnet.yaml  cifar10_resnet_cprevision.yaml  cifar10n_resnet.yaml  cifar10n_resnet_cprevision.yaml  clothing1m_resnet.yaml  clothing1m_resnet_cprevision.yaml  mnist_lenet.yaml  mnist_lenet_cprevision.yaml
src/cp_t_revision/configs/experiment/dataset/: cifar10.yaml  cifar100.yaml  cifarn.yaml  clothing1m.yaml  mnist.yaml
src/cp_t_revision/configs/experiment/model/: lenet.yaml  resnet.yaml
src/cp_t_revision/configs/experiment/noise_transform/: pair_flip.yaml  symmetric.yaml
