[project]
authors = [{ name = "marcosfmmota", email = "marcosfmmota@gmail.com" }]
dependencies = [
    "jsonargparse[signatures]>=4.34.0,<5",
    "torchcp>=1.0.2,<2", "torch-geometric>=2.6.1,<3", "torchshow>=0.5.2,<0.6",
]
description = "Add a short description here"
name = "cp_t_revision"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.1"

[tool.pixi.pypi-dependencies]
cp_t_revision = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
pytorch = ">=2.5.1,<3"
pytorch-cuda = { version = "12.1.*", channel = "pytorch" }
torchvision = ">=0.20.1,<0.21"
libjpeg-turbo = { version = "*", channel = "conda-forge" }
lightning = ">=2.4.0,<3"
mlflow = ">=2.18.0,<3"
torchmetrics = ">=1.5.2,<2"
transformers = ">=4.47.0,<5"
loguru = ">=0.7.2,<0.8"
hydra-core = ">=1.3.2,<2"
pillow = ">=10.3.0,<11"
altair = ">=5.5.0,<6"
vl-convert-python = ">=1.7.0,<2"
selenium = ">=4.35.0,<5"

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.pixi.feature.dev.dependencies]
ipykernel = "*"
gdown = "*"
pyright = "*"
seaborn = "*"
